Add printer function

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,8 @@ The goal of testlg is to Provides Functionality for my package
 You can install the released version of testlg from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("testlg")
+install.packages("devtools")
+devtools::install_github("lucasgodeiro/testlg")
 ```
 
 ## Example
