--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,7 @@
 output: github_document
 ---
 
+[![Travis build status](https://travis-ci.com/lucasgodeiro/testlg.svg?branch=master)](https://travis-ci.com/lucasgodeiro/testlg)
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r setup, include = FALSE}
