--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,7 @@ output: github_document
 ---
 
 [![Travis build status](https://travis-ci.com/lucasgodeiro/testlg.svg?branch=master)](https://travis-ci.com/lucasgodeiro/testlg)
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/lucasgodeiro/testlg?branch=master&svg=true)](https://ci.appveyor.com/project/lucasgodeiro/testlg)
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r setup, include = FALSE}
